tests/lexer/invalid/test_unterminated_string.src
"unterminated string
"another unterminated
int x = "hello;
"string with no closing quote